refactor: ResponseDateDTO를 하위 클래스로 분리 및 DiaryDateResponse 인터페이스 도입
- ResponseDateDTO: 기록 유형별 전용 Response 클래스로 분리
  · WeightResponse: 몸무게 기록
  · StateResponse: 에너지, 식욕, 기절 등 상태 기록
  · CountResponse: 호흡수, 심박수 등 수치 기록
  · UrinaryResponse: 소변 기록 (상태, 량, 메모, 사진)
  · SignificantResponse: 특이사항 (제목, 내용, 사진, 동영상)
  · ConvulsionResponse: 경련 (상태, 증상, 동영상)
  · SoundResponse: 소리 기록 (제목, 음성파일)
  · SnotResponse: 콧물 기록 (상태, 메모, 사진)

- DiaryDateResponse 인터페이스: 공통 타입 정의로 타입 안전성 확보
- QueryService: 새로운 Response 클래스 사용으로 업데이트
- ResponseDateListDTO: DiaryDateResponse 인터페이스 사용

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>